--- a/index.html
+++ b/index.html
@@ -531,10 +531,10 @@
               ></i>
               <h4 class="font-weight-bold m-0">Frontend Development</h4>
             </div>
-            <p>
+            <!-- <p>
               Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
               Amet lorem lorem lorem est amet labore eirmod erat clita
-            </p>
+            </p> -->
             <!-- <a
               class="border-bottom border-primary text-decoration-none"
               href=""
@@ -549,10 +549,10 @@
               ></i>
               <h4 class="font-weight-bold m-0">Backend Development</h4>
             </div>
-            <p>
+            <!-- <p>
               Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
               Amet lorem lorem lorem est amet labore eirmod erat clita
-            </p>
+            </p> -->
             <!-- <a
               class="border-bottom border-primary text-decoration-none"
               href=""
@@ -568,10 +568,10 @@
               ></i>
               <h4 class="font-weight-bold m-0">Mobile Development</h4>
             </div>
-            <p>
+            <!-- <p>
               Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
               Amet lorem lorem lorem est amet labore eirmod erat clita
-            </p>
+            </p> -->
             <!-- <a
               class="border-bottom border-primary text-decoration-none"
               href=""
@@ -586,10 +586,10 @@
               ></i>
               <h4 class="font-weight-bold m-0">Smart Contract</h4>
             </div>
-            <p>
+            <!-- <p>
               Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
               Amet lorem lorem lorem est amet labore eirmod erat clita
-            </p>
+            </p> -->
             <!-- <a
               class="border-bottom border-primary text-decoration-none"
               href=""
@@ -604,10 +604,10 @@
               ></i>
               <h4 class="font-weight-bold m-0">SEO</h4>
             </div>
-            <p>
+            <!-- <p>
               Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
               Amet lorem lorem lorem est amet labore eirmod erat clita
-            </p>
+            </p> -->
             <!-- <a
               class="border-bottom border-primary text-decoration-none"
               href=""
@@ -622,10 +622,10 @@
               ></i>
               <h4 class="font-weight-bold m-0">Test and Code Review</h4>
             </div>
-            <p>
+            <!-- <p>
               Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
               Amet lorem lorem lorem est amet labore eirmod erat clita
-            </p>
+            </p> -->
             <!-- <a
               class="border-bottom border-primary text-decoration-none"
               href=""
@@ -689,13 +689,13 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio-1.jpg"
+                src="img/1.PNG"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
-                <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                <a href="img/1.PNG" data-lightbox="portfolio">
                   <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                 </a>
               </div>
@@ -705,13 +705,13 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio-2.jpg"
+                src="img/4.PNG"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
-                <a href="img/portfolio-2.jpg" data-lightbox="portfolio">
+                <a href="img/4.PNG" data-lightbox="portfolio">
                   <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                 </a>
               </div>
@@ -721,13 +721,13 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio-3.jpg"
+                src="img/5.PNG"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
-                <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                <a href="img/5.PNG" data-lightbox="portfolio">
                   <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                 </a>
               </div>
@@ -737,13 +737,13 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio-4.jpg"
+                src="img/2.PNG"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
-                <a href="img/portfolio-4.jpg" data-lightbox="portfolio">
+                <a href="img/2.PNG" data-lightbox="portfolio">
                   <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                 </a>
               </div>
@@ -753,13 +753,13 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio-5.jpg"
+                src="img/3.PNG"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
-                <a href="img/portfolio-5.jpg" data-lightbox="portfolio">
+                <a href="img/3.PNG" data-lightbox="portfolio">
                   <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                 </a>
               </div>
@@ -769,13 +769,13 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio-6.jpg"
+                src="img/6.PNG"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
-                <a href="img/portfolio-6.jpg" data-lightbox="portfolio">
+                <a href="img/6.PNG" data-lightbox="portfolio">
                   <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                 </a>
               </div>
@@ -787,7 +787,7 @@
     <!-- Portfolio End -->
 
     <!-- Testimonial Start -->
-    <div class="container-fluid py-5" id="testimonial">
+    <!-- <div class="container-fluid py-5" id="testimonial">
       <div class="container">
         <div
           class="position-relative d-flex align-items-center justify-content-center"
@@ -854,7 +854,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Testimonial End -->
 
     <!-- Footer Start -->
@@ -862,7 +862,7 @@
       class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5"
     >
       <div class="container text-center py-5">
-        <div class="d-flex justify-content-center mb-4">
+        <!-- <div class="d-flex justify-content-center mb-4">
           <a class="btn btn-light btn-social mr-2" href="#">
             <i class="fab fa-twitter"></i>
           </a>
@@ -875,10 +875,10 @@
           <a class="btn btn-light btn-social" href="#">
             <i class="fab fa-instagram"></i>
           </a>
-        </div>
+        </div> -->
         <p class="m-0">
           &copy;
-          <a class="text-white font-weight-bold" href="#">CoolDev0725</a>
+          <a class="text-white font-weight-bold" href="#">devlouis98</a>
           .
         </p>
       </div>
